--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "npm run dev",
     "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.dev.js --open"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --host 127.0.0.1 --config webpack.dev.js --open"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -71,5 +71,9 @@
   "repository": {
     "type": "git"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "axios": "^0.27.2",
+    "echarts": "^5.3.2"
+  }
 }
